--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -88,6 +88,14 @@
     cursor: pointer;
     border-radius: 12%;
   }
+  .fullName{
+    color: #FBB03B;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    margin: 0 20px;
+    cursor: pointer;
+  }
 .more {
     font-weight: bold;
     color: #fff;
