--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
 *{
-    /* font-family: 'Raleway', sans-serif;
-    font-family: 'Roboto', sans-serif; */
+    font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+body{
+    background: #f1f3f6;
 }
 .flexRow{
     display: flex;
+}
+.sb{
+    justify-content: space-between;
 }
