--- a/src/components/MaterialUI/style.css
+++ b/src/components/MaterialUI/style.css
@@ -138,3 +138,9 @@ display: none;
   background-color: #f0f0f0;
   cursor: pointer;
 }
+
+.anchorButton{
+  background: transparent;
+  border: none;
+  letter-spacing: 1px;
+}
