--- a/src/components/MaterialUI/style.css
+++ b/src/components/MaterialUI/style.css
@@ -13,9 +13,8 @@
   align-items: center;
 }
 .modalContainer{
-  min-width: 400px;
   max-width: 90%;
-  min-height: 200px;
+  min-height: 350px;
   max-height: 90vh;
   background: #fff;
   border-radius: 4px;
@@ -24,7 +23,7 @@
 }
 .modalClose{
   position: absolute;
-  color: #fff;
+  color: rgb(5, 121, 255);
   right: 15px;
   font-size: 20px;
 }
@@ -73,7 +72,11 @@
   box-shadow: 0 1px 2px 0 rgba(0,0,0,.2);
   border: none;
   cursor: pointer;
-  border-radius: 2px;
+  -webkit-border-radius: 20px;
+border-radius: 10px;
+background: #fb641b;
+-webkit-box-shadow: 5px 5px 10px #ad4513, -5px -5px 10px #ffffff;
+box-shadow: 5px 5px 10px #ad4513, -5px -5px 10px #ffffff;
 }
 .materialButton:hover{
   box-shadow: 0 4px 6px 0 rgba(0,0,0,.12);
@@ -143,4 +146,12 @@ display: none;
   background: transparent;
   border: none;
   letter-spacing: 1px;
+}
+@media screen and (max-width: 700px) {
+   .modalContainer{
+    max-width: 200px;
+  }
+  .materialButton{
+    max-width: 190px;
+  }
 }
