--- a/src/components/Headers/style.css
+++ b/src/components/Headers/style.css
@@ -1,181 +1,190 @@
 .header{
-    width: 100%;
-    height: 56px;
-    background: #000000;
+  width: 100%;
+  height: 56px;
+  background: #000000;
 }
 .subHeader{
-    max-width: 1100px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    margin: 0 auto;   
-    align-items: center;
+  max-width: 1100px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  margin: 0 auto;   
+  align-items: center;
 }
 
 .logo{
-  width:100%;
-  height:auto;
-  max-width:60px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-end;
+width:100%;
+height:auto;
+max-width:60px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-end;
 }
 .logo .logoimage{
-    width: 69px;
-    height:auto;
+  width: 69px;
+  height:auto;
 }
 .Navbrand{
-  color:#fff;
-  padding-left: 2px;
+color:#fff;
+padding-left: 2px;
 }
 .exploreText{ 
-    font-size: 10px;
-    font-style: italic; 
+  font-size: 10px;
+  font-style: italic; 
 }
 .plusText{ 
-    font-size: 10px; 
-    margin: 0 2px; 
-    text-transform: capitalize;
-    font-style: italic;
-    color: yellow;
-  }
+  font-size: 10px; 
+  margin: 0 2px; 
+  text-transform: capitalize;
+  font-style: italic;
+  color: yellow;
+}
 .logo .goldenStar{
-    width: 10px;
-    height: 10px;
+  width: 10px;
+  height: 10px;
 }
 
 .searchInputContainer {
-    width: 560px;
-    position: relative;
-    background: #fff;
-    height: 36px;
-    border-radius: 1px;
-    overflow: hidden;
-    display: flex;
-    border-color: #FBB03B;
-    border-style: solid;
-  }
+  width: 560px;
+  position: relative;
+  background: #fff;
+  height: 36px;
+  border-radius: 1px;
+  overflow: hidden;
+  display: flex;
+  border-color: #FBB03B;
+  border-style: solid;
+}
 .searchInput {
-    width: 518px;
-    border: 0;
-    height: 36px;
-    outline: none;
-    box-sizing: border-box;
-    padding: 0 10px;
-    
-  }
+  width: 518px;
+  border: 0;
+  height: 36px;
+  outline: none;
+  box-sizing: border-box;
+  padding: 0 10px;
+  
+}
 .searchIconContainer {
-    display: flex;
-    flex: 1;
-    justify-content: center;
-    align-items: center;
-    background: #0177BF;
-    border-radius: 50%;
-  }
-  .rightMenu{
-    display: flex;
-    flex: 1;
-    justify-content: flex-end;
-    align-items: center;
-  }
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  background: #0177BF;
+  border-radius: 50%;
+}
+.rightMenu{
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+  align-items: center;
+}
 #loginButton {
-    
-    background-color: #FBB03B;
-    color:black;
-  }
-  #fullName{
-    color: #FBB03B;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    margin: 0 20px;
-    cursor: pointer;
-  }
+  
+  background-color: #FBB03B;
+  color:black;
+}
+#fullName{
+  color: #FBB03B;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  margin: 0 20px;
+  cursor: pointer;
+}
 .more {
-    font-weight: bold;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    margin: 0 20px;
-    cursor: pointer;
-  }
+  font-weight: bold;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  margin: 0 20px;
+  cursor: pointer;
+}
+.Navitems{
+color:#fff;
+}
+.Navitems:hover, .Navitems:active{
+  color:#1976d2;
+}
 .cart {
-    font-weight: bold;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    margin: 0 20px
-  }
+  font-weight: bold;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  margin: 0 20px
+}
+
 
 .authContainer{
-  color: #212121;
-  margin: 0 auto;
-  border-radius: 2px;
-  height: 528px;
+color: #212121;
+margin: 0 auto;
+border-radius: 2px;
+height: 528px;
+max-width: 750px;
+min-width: 650px;
+}
+.row{
+width: 100%;
+display: flex;
+flex-flow: row wrap;
+height: 528px;
   max-width: 750px;
   min-width: 650px;
 }
-.row{
-  width: 100%;
-  display: flex;
-  flex-flow: row wrap;
-  height: 528px;
-    max-width: 750px;
-    min-width: 650px;
-}
 
 .leftspace{
-  width: 40%;
-  height: 100%;
-  color: #fff;
-  letter-spacing: 1px;
-  background-image: url('../../images/login-image.png');
-  background-color: #057CC2;
-  background-repeat: no-repeat;
-  background-position: center 85%;
-  padding: 40px 33px;
-  box-sizing: border-box;
+width: 40%;
+height: 100%;
+color: #fff;
+letter-spacing: 1px;
+background-image: url('../../images/login-image.png');
+background-color: #057CC2;
+background-repeat: no-repeat;
+background-position: center 85%;
+padding: 40px 33px;
+box-sizing: border-box;
 }
 
 .rightspace{
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  align-items: center;
+display: flex;
+flex: 1;
+flex-direction: column;
+align-items: center;
 }
 .loginInputContainer{
-  width: 100%;
-  box-sizing: border-box;
-  padding: 0 30px;
-  margin: 40px 0;
+width: 100%;
+box-sizing: border-box;
+padding: 0 30px;
+margin: 40px 0;
 }
 
 @media screen and (max-width: 990px) {
-  .nav-item{
-    padding-left: 100px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+.nav-item{
+  padding-left: 100px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-bottom-style: ridge;
+  border-bottom-width: thin;
 }
 }
 @media screen and (max-width: 700px) {
-  .row{
-    height: 0px;
-    flex-flow: column;
-  }
-  .leftspace{
-    visibility: hidden;
-  }
-  .rightspace{
-    flex-direction: row;
+.row{
+  height: 0px;
+  flex-flow: column;
+}
+.leftspace{
+  visibility: hidden;
+}
+.rightspace{
+  flex-direction: row;
 
-  }
-  .loginInputContainer{
-    padding-left: 2px;
-    padding-right: 2px;
-  }
-  .authContainer{
-    height: auto;
-  }
+}
+.loginInputContainer{
+  padding-left: 2px;
+  padding-right: 2px;
+}
+.authContainer{
+  height: auto;
+}
 }
