--- a/src/containers/CartPage/style.css
+++ b/src/containers/CartPage/style.css
@@ -1,6 +1,16 @@
 .cartContainer{
     display: flex;
+    padding:20px;
     max-width: 1260px;
     margin: 15px auto;
     justify-content: space-between;
+}
+@media screen and (max-width:950px) {
+    .cartContainer{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .myCard{
+        margin-top: 20px;
+    }
 }
