--- a/src/components/Headers/style.css
+++ b/src/components/Headers/style.css
@@ -83,6 +83,12 @@ padding-left: 2px;
   
   background-color: #FBB03B;
   color:black;
+  font-weight: 200;
+}
+#loginButton:hover {
+  
+  background-color: #1976d2;
+  color:#fff;
 }
 #fullName{
   color: #FBB03B;
@@ -102,12 +108,13 @@ padding-left: 2px;
 }
 .Navitems{
 color:#fff;
+font-weight: 200;
 }
 .Navitems:hover, .Navitems:active{
   color:#1976d2;
 }
 .cart {
-  font-weight: bold;
+  font-weight: 200;
   color: #fff;
   display: flex;
   align-items: center;
@@ -158,7 +165,6 @@ box-sizing: border-box;
 padding: 0 30px;
 margin: 40px 0;
 }
-
 @media screen and (max-width: 990px) {
 .nav-item{
   padding-left: 100px;
