--- a/src/containers/OrderPage/style.css
+++ b/src/containers/OrderPage/style.css
@@ -6,7 +6,6 @@
 .orderImgContainer{
     width: 80px;
     height: 80px;
-    overflow: hidden;
     text-align: center;
 }
 .orderImg{
@@ -18,14 +17,14 @@
     flex: 1;
 }
 .orderName{
-    width: 300px;
+    width: 100%;
     box-sizing: border-box;
-    padding: 0 20px;
+    padding: 0 10px;
     font-size: 12px;
 }
 .orderPrice{
     box-sizing: border-box;
-    padding: 0 40px;
+    padding: 0 10px;
     display: flex;
     align-items: flex-start;
     font-size: 14px;
