--- a/src/containers/ProductListPage/ClothingAndAccessories/style.css
+++ b/src/containers/ProductListPage/ClothingAndAccessories/style.css
@@ -10,6 +10,8 @@
 .caImgContainer{
     width: 240px;
     height: 300px;
+    display: flex;
+    justify-content: center;
     overflow: hidden;
     position: relative;
 }
