--- a/src/components/Headers/style.css
+++ b/src/components/Headers/style.css
@@ -97,7 +97,7 @@ padding-left: 2px;
   color:#fff;
 }
 #fullName{
-  color: #FBB03B;
+  color: #000;
   font-weight: bold;
   display: flex;
   align-items: center;
